# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  main.py  pyproject.toml  tasks.py
documentation/: architecture.md  changelog.md  guide.md  record of working hours.md  requirement specification.md  tests.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: index.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: kaavio.md  sekvenssikaavio.md
src/: config.py  database.py  main.py
src/classes/: player.py  wall.py
src/entities/: base.py  character.py  entry.py  player_class.py  race.py  user.py
src/gui/: entry_form.py  form.py  main_window.py  window.py
src/repositories/: entry_repository.py  user_repository.py
src/services/: entry_service.py  user_service.py
src/tests/: conftest.py  test_config.py  test_database.py  test_entities.py  test_player.py  test_repositories.py  test_services.py
src/tests/entities/: test_player_subclass.py
